Fix learn page img styling on mobile

--- a/packages/prop-house-webapp/src/components/pages/Learn/Learn.module.css
+++ b/packages/prop-house-webapp/src/components/pages/Learn/Learn.module.css
@@ -47,6 +47,9 @@
 }
 
 @media (max-width: 1200px) {
+  .leftCol img {
+    border-radius: 15px;
+  }
   .breakOutMobile {
     width: initial !important;
     position: initial !important;
